# fcidump

example/: example-cpp.cpp
lib/: CMakeLists.txt  FCIdump.cpp  FCIdump.h
test/: CMakeLists.txt  testFCIdump.cpp
